Added VIN decoding
